# s3mock-python

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  s3mock_test.py
.github/workflows/: ci.yml
tests/: conftest.py  test_acl.py  test_aws_chunked_encoding.py  test_buckets.py  test_copy_object.py  test_multipart.py  test_objects.py  test_presigned_urls.py
