[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "s3mock-python"
version = "0.1.0"
description = "Pytest example for Adobe S3Mock using Testcontainers"
readme = "README.md"
authors = [
  { name = "Arne Franken" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
keywords = ["s3", "mock", "testcontainers", "boto3", "pytest"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Testing",
]
# Runtime dependencies (for running tests/examples)
dependencies = [
  "boto3>=1.40.35",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "testcontainers>=4.13",
  "boto3-stubs[s3]>=1.40.35",
  "mypy>=1.18.2",
  "ruff>=0.13.1",
]

[project.urls]
Homepage = "https://github.com/afranken/s3mock-python"
Repository = "https://github.com/afranken/s3mock-python"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["."]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", "F", "I",  # pycodestyle errors, pyflakes, isort
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
pretty = true
follow_untyped_imports = true

[tool.uv]
# Prefer an in-repo virtualenv
managed = true
python-preference = "managed"
# Use a local .venv by default
# Run: uv venv && uv sync
