[project]
name = "s3mock-python"
version = "0.1.0"
description = "Pytest example for Adobe S3Mock using Testcontainers"
readme = "README.md"
authors = [
  { name = "Arne Franken" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
keywords = ["s3", "mock", "testcontainers", "boto3", "pytest"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Testing",
]
# Runtime dependencies (for running tests/examples)
dependencies = [
  "boto3>=1.42.34",
  "requests>=2.32.5",
  "awscrt>=0.31.1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "testcontainers>=4.14.0",
  "boto3-stubs[s3]>=1.42.34",
  "ruff>=0.14.14",
  "ty>=0.0.13"
]

[project.urls]
Homepage = "https://github.com/afranken/s3mock-python"
Repository = "https://github.com/afranken/s3mock-python"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["."]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", "F", "I",  # pycodestyle errors, pyflakes, isort
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.uv]
# Prefer an in-repo virtualenv
managed = true
python-preference = "managed"
